--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 
 <app-navbar></app-navbar>
 
-<app-about-me></app-about-me>
+<!-- <app-about-me></app-about-me>
 
 <app-abilities></app-abilities>
 
@@ -14,4 +14,4 @@
 
 <app-contact-me></app-contact-me>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
