--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,7 @@ html {
 
 body {
 
-  // background-color: #262e34;
+  background-color: #262e34;
   display: flex;
   justify-content: center;
   align-items: center;
