--- a/src/app/landing-page/main-page/navbar/navbar.component.scss
+++ b/src/app/landing-page/main-page/navbar/navbar.component.scss
@@ -149,11 +149,11 @@ p.active {
 }
 
 
-// @media (max-width: 650px){
+@media (max-width: 650px){
 
-//   .navbar{
-//     display: none;
-//   }
+  .navbar{
+    display: none;
+  }
 
 
-// }
+}
