--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,16 +72,12 @@ html {
 
 body {
 
-  background-color: #262e34;
+  // background-color: #262e34;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow-x: hidden;
-
   max-width: 100vw;
-
-
-  margin: 0;
 }
 
 h1 {
