--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,7 +82,7 @@ body {
 
 h1 {
   font-family: "Anta Regular";
-  font-size: clamp(24px, 5vw, 88px);
+  font-size: 88px;
   color: #f8f5ec;
   text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black,
     -1px 1px 0 black;
